# img2tags

./: .gitignore  .markdownlint-cli2.jsonc  Makefile  README.md  Taskfile.yml  _typos.toml  get_resolution.py  memo  mise.toml  package-lock.json  package.json  pnpm-lock.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  typos.yml
img2tags/: cli.py  common.py  img2tags.py  img2text.py  tagger.py
