[tool.poetry]
name = "img2tags"
version = "1.6.2"
description = "Tag images"
authors = ["Yuta Hayashibe <yuta@hayashibe.jp>"]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/shirayu/img2tags"
repository = "https://github.com/shirayu/img2tags"
packages = [{include = "img2tags"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
opencv-python = "^4.7.0.72"
numpy = ">=1.24.3"
torch = ">=2.1.0"
huggingface-hub = ">=0.15.1"
pillow = "^10.2.0"
onnxruntime = { version = ">=1.16.1", optional = true }
onnxruntime-gpu = { version = ">=1.16.1", optional = true }
onnx = {version=">=1.14.0", optional = true }
pydantic = "^2.6.1"
rich = "^13.7.0"
accelerate = {version = ">=0.22.0", optional = true}
transformers = {version = ">=4.34.0", optional = true}
bitsandbytes = {version = ">=0.41.1", optional = true}

[tool.poetry.extras]
convert = ["onnx"]
cpu = ["onnxruntime"]
gpu = ["onnxruntime-gpu"]
text = ["transformers", "bitsandbytes", "accelerate"]

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2.1,<9.0.0"
yamllint = ">=1.32.0"
ruff = ">=0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
img2tags = "img2tags.img2tags:main"
img2text = "img2tags.img2text:main"

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "basic"
exclude = [".venv", "**/node_modules", "**/__pycache__",]
reportPrivateImportUsage = "information"
reportUnusedVariable="warning"

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
