[project]
name = "img2tags"
version = "1.6.6"
authors = [{ author = "Yuta Hayashibe", email = "yuta@hayashibe.jp" }]
license = "Apache-2.0"
readme = "README.md"
homepage = "https://github.com/shirayu/img2tags"
repository = "https://github.com/shirayu/img2tags"
requires-python = ">=3.10,<4"
dependencies = [
  "huggingface-hub>=0.25.0",
  "numpy>=2.1.1",
  "opencv-python>=4.10.0.84",
  "pillow>=10.4.0",
  "pydantic>=2.9.2",
  "rich>=13.8.1",
  "torch>=2.4.1",
]

[project.optional-dependencies]
cpu = ["onnxruntime>=1.19.2"]
gpu = ["onnxruntime-gpu>=1.19.2"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = ["accelerate>=0.34.2", "ruff>=0.9.6", "yamllint>=1.35.1"]

[project.scripts]
img2tags = "img2tags.img2tags:main"

[tool.pyright]
pythonVersion = "3.10"
reportDeprecated = "error"

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = []
fixable = ["ALL"]
